--- a/gmwfreered/gmw.css
+++ b/gmwfreered/gmw.css
@@ -1043,6 +1043,7 @@ div#footerLogo a {
 	background-position: 0 0px;
 	color: #777777;
 	text-decoration: none;
+        font-size: 12px;
 }
 div#footerLogo a:hover {
 	color: #0087D5;
